@@ -1,3 +1,10 @@
+2005-03-08  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/20142
+	* init.c (build_vec_init): When determining whether or not the
+	element type has an asignment operator, look through all array
+	dimensions. 
+
 2005-03-07  Mark Mitchell  <mark@codesourcery.com>
 
 	* class.c (finish_struct_1): Do not warn about non-virtual
